@@ -3,6 +3,9 @@
 * Added Vector icon set from n.design.
 * Added Pinboard.in extension.
 * Improved icon options on add/edit feed pages.
+* YouTube will now embed itself in Lifestream permalinks.
+* Fixed YouTube URLs (SimplePie issue).
+* Added video theme template.
 
 0.99.9.7
 
